--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,101 +5,11 @@
 #FEFAE0 - blanco
 */
 
-/* Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Bagel+Fat+One&family=Rubik+Bubbles&display=swap'); /* font-family: "Bagel Fat One", system-ui; */
-@import url('https://fonts.googleapis.com/css2?family=Atma:wght@300;400;500;600;700&family=Bagel+Fat+One&family=Rubik+Bubbles&display=swap'); /* font-family: "Atma", system-ui; */
+// Archivos parciales
+@use "./generales/variables.scss";
+@use "./generales/reset.scss";
+@use "./generales/headerFooter.scss";
+@use "./generales/etiquetas.scss";
 
-/* ============================================= */
-/* Header */
-
-/* Clases */
-.logo {
-    width: 150px;
-}
-
-/* Etiquetas */
-header {
-    background-color: #0A400C;
-}
-
-nav ul {
-    list-style: none;
-}
-
-nav li a {
-    color: #FEFAE0;
-}
-/* ============================================= */
-
-/* ============================================= */
-/* Main */
-
-/* Clases */
-.banner {
-    background-image: url(../medios/banner.jpg);
-    height: 600px;
-    background-position: center;
-    background-size: cover;
-  
-    .subtitulo {
-    text-align: center;
-    font-size: 20px;
-    font-family: "Bagel Fat One", system-ui;
-    color: #19183B
-    }
-}
-
-.bloque_texto {
-    margin-left: 10%;
-    margin-right: 10%;
-    text-align: center;
-    font-size: 18px;
-}
-
-/* Etiquetas */
-h1 {
-    text-align: center;
-    text-decoration: underline;
-    font-size: 48px;
-    font-family: "Bagel Fat One", system-ui;
-    color: #19183B
-}
-
-h2 {
-    text-decoration: underline;
-    font-size: 25px;
-    font-family: "Bagel Fat One", system-ui;
-    color: #19183B
-}
-
-h4 {
-    font-size: 14px;
-    font-family: "Bagel Fat One", system-ui;
-}
-
-p {
-    font-family: "Atma", system-ui;
-}
-
-label {
-    font-family: "Atma", system-ui;
-}
-
-section {
-    background-color: #FEFAE0;
-}
-
-section img {
-    width: 160px;
-}
-/* ============================================= */
-
-/* ============================================= */
-/* Footer */
-
-/* Etiquetas */
-footer {
-    background-color: #0A400C;
-}
-
-/* ============================================= */
+@use "./page/index.scss";
+@use "./page/adopcion.scss";
