--- a/sass/generales/_reset.scss
+++ b/sass/generales/_reset.scss
@@ -1,6 +1,8 @@
 /* Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Bagel+Fat+One&family=Rubik+Bubbles&display=swap'); /* font-family: "Bagel Fat One", system-ui; */
-@import url('https://fonts.googleapis.com/css2?family=Atma:wght@300;400;500;600;700&family=Bagel+Fat+One&family=Rubik+Bubbles&display=swap'); /* font-family: "Atma", system-ui; */
+/* font-family: "Bagel Fat One", system-ui; */
+@import url('https://fonts.googleapis.com/css2?family=Bagel+Fat+One&family=Rubik+Bubbles&display=swap'); 
+/* font-family: "Atma", system-ui; */
+@import url('https://fonts.googleapis.com/css2?family=Atma:wght@300;400;500;600;700&family=Bagel+Fat+One&family=Rubik+Bubbles&display=swap'); 
 
 
 * {
