--- a/sass/page/_adopcion.scss
+++ b/sass/page/_adopcion.scss
@@ -1,8 +1,30 @@
 @use "../generales/variables.scss" as*;
 
-.bloque_texto {
-    margin-left: 10%;
-    margin-right: 10%;
-    text-align: center;
-    font-size: 18px;
+.principal {
+    background-color: $blanco;
+
+    .bloque_texto {
+        margin-left: 10%;
+        margin-right: 10%;
+        text-align: center;
+        font-size: 18px;
+    }
+
+    .adopcion {
+        @include flex;
+        justify-content: space-evenly;
+        padding-bottom: 30px;
+    }
+
+    .intro {
+        padding-top: 75px;
+        text-align: center;
+    }
+
+    .acordeonFAQ {
+        padding-left: 50px;
+        padding-right: 50px;
+        padding-bottom: 80px;
+    }
 }
+
