--- a/css/main.css
+++ b/css/main.css
@@ -181,4 +181,36 @@ section img {
   padding-bottom: 80px;
 }
 
+.principal {
+  background-color: #FEFAE0;
+}
+.principal .formContacto {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-bottom: 80px;
+}
+.principal .formContacto .itemForm {
+  display: flex;
+  flex-direction: column;
+}
+.principal .formContacto .boton {
+  display: flex;
+  flex-direction: column;
+  margin-top: 10px;
+}
+.principal .mapa {
+  display: flex;
+  flex-direction: column;
+}
+.principal .mapa div h2 {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.principal .mapa div {
+  text-align: center;
+  margin-bottom: 40px;
+}
+
 /*# sourceMappingURL=main.css.map */
