--- a/sass/page/_adopcion.scss
+++ b/sass/page/_adopcion.scss
@@ -1,6 +1,6 @@
 @use "../generales/variables.scss" as*;
 
-.principal {
+.principal-Adopcion {
     background-color: $blanco;
 
     .bloque_texto {
