--- a/sass/page/_contacto.scss
+++ b/sass/page/_contacto.scss
@@ -1,6 +1,6 @@
 @use "../generales/variables.scss" as*;
 
-.principal {
+.principal-Contacto {
     background-color: $blanco;
 
     .formContacto {
