--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,7 @@
 .navegacion {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
   background-color: #09520c;
 }
 .navegacion .links {
@@ -39,7 +40,7 @@
   flex-direction: row;
   align-items: end;
   gap: 20px;
-  padding-left: 1480px;
+  margin-right: 10px;
 }
 .navegacion .areaLogo .logo {
   width: 60px;
@@ -64,7 +65,7 @@ nav li a {
 /* Footer */
 .footer {
   background-color: #09520c;
-  height: 80px;
+  height: 100px;
 }
 .footer .logo {
   width: 60px;
@@ -98,10 +99,6 @@ label {
   font-family: "Atma", system-ui;
 }
 
-section {
-  background-color: #FEFAE0;
-}
-
 section img {
   width: 160px;
 }
@@ -122,95 +119,207 @@ section img {
   font-family: "Atma", system-ui;
 }
 
-.principal {
+.principal-Index {
   background-color: #FEFAE0;
 }
-.principal .banner {
+.principal-Index .banner {
   background-image: url(../medios/banner.jpg);
   height: 500px;
   background-position: center;
   background-size: cover;
 }
-.principal .banner .subtitulo {
+.principal-Index .banner .subtitulo {
   text-align: center;
   font-size: 20px;
   font-family: "Bagel Fat One", system-ui;
   color: #19183B;
 }
-.principal .objetivo {
+.principal-Index .objetivo {
   text-align: center;
 }
-.principal .objetivo .bloque_texto {
+.principal-Index .objetivo .bloque_texto {
   margin-left: 10%;
   margin-right: 10%;
   text-align: center;
   font-size: 18px;
 }
-.principal .intro {
+.principal-Index .intro {
   text-align: center;
 }
-.principal .ayudados {
+.principal-Index .ayudados {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
   padding-bottom: 30px;
 }
 
-.principal {
+.principal-Adopcion {
   background-color: #FEFAE0;
 }
-.principal .bloque_texto {
+.principal-Adopcion .bloque_texto {
   margin-left: 10%;
   margin-right: 10%;
   text-align: center;
   font-size: 18px;
 }
-.principal .adopcion {
+.principal-Adopcion .adopcion {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
   padding-bottom: 30px;
 }
-.principal .intro {
+.principal-Adopcion .intro {
   padding-top: 75px;
   text-align: center;
 }
-.principal .acordeonFAQ {
+.principal-Adopcion .acordeonFAQ {
   padding-left: 50px;
   padding-right: 50px;
   padding-bottom: 80px;
 }
 
-.principal {
+.principal-Contacto {
   background-color: #FEFAE0;
 }
-.principal .formContacto {
+.principal-Contacto .formContacto {
   display: flex;
   flex-direction: row;
   justify-content: center;
   margin-bottom: 80px;
 }
-.principal .formContacto .itemForm {
+.principal-Contacto .formContacto .itemForm {
   display: flex;
   flex-direction: column;
 }
-.principal .formContacto .boton {
+.principal-Contacto .formContacto .boton {
   display: flex;
   flex-direction: column;
   margin-top: 10px;
 }
-.principal .mapa {
+.principal-Contacto .mapa {
   display: flex;
   flex-direction: column;
 }
-.principal .mapa div h2 {
+.principal-Contacto .mapa div h2 {
   display: flex;
   flex-direction: row;
   justify-content: center;
 }
-.principal .mapa div {
+.principal-Contacto .mapa div {
   text-align: center;
   margin-bottom: 40px;
+}
+
+@media (max-width: 480px) {
+  .ayudados {
+    flex-wrap: wrap;
+  }
+  .ayudados .carta {
+    width: 180px;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 15px;
+  }
+  .adopcion {
+    flex-wrap: wrap;
+  }
+  .adopcion .carta {
+    width: 100px;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 15px;
+  }
+  .adopcion .carta .tituloCarta {
+    font-size: 12px;
+  }
+  .adopcion .carta .descCarta {
+    font-size: 10px;
+  }
+}
+@media (min-width: 481px) and (max-width: 579px) {
+  .ayudados {
+    flex-wrap: wrap;
+  }
+  .ayudados .carta {
+    width: 200px;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 15px;
+  }
+  .ayudados .carta .tituloCarta {
+    font-size: 14px;
+  }
+  .ayudados .carta .descCarta {
+    font-size: 12px;
+  }
+}
+@media (min-width: 580px) and (max-width: 768px) {
+  .ayudados {
+    flex-wrap: wrap;
+  }
+  .ayudados .carta {
+    width: 240px;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 15px;
+  }
+  .ayudados .carta .tituloCarta {
+    font-size: 16px;
+  }
+  .ayudados .carta .descCarta {
+    font-size: 14px;
+  }
+}
+@media (min-width: 769px) and (max-width: 1000px) {
+  .ayudados {
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  .ayudados .carta {
+    width: 300px;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 15px;
+  }
+}
+@media (min-width: 481px) and (max-width: 768px) {
+  .adopcion {
+    flex-wrap: wrap;
+  }
+  .adopcion .carta {
+    width: 200px;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 15px;
+  }
+  .adopcion .carta .tituloCarta {
+    font-size: 16px;
+  }
+  .adopcion .carta .descCarta {
+    font-size: 14px;
+  }
+}
+@media (min-width: 769px) and (max-width: 958px) {
+  .adopcion {
+    flex-wrap: wrap;
+  }
+  .adopcion .carta {
+    width: 200px;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 15px;
+  }
+}
+@media (min-width: 959px) and (max-width: 1199px) {
+  .adopcion {
+    flex-wrap: wrap;
+  }
+  .adopcion .carta {
+    width: 260px;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 15px;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
