--- a/sass/generales/_carta.scss
+++ b/sass/generales/_carta.scss
@@ -4,7 +4,8 @@
     width: 240px;
 
     .cuerpoCarta {
-        background-color: $marronClaro;
+        background: #B1AB86;
+        background: linear-gradient(136deg,rgba(177, 171, 134, 1) 30%, rgba(117, 90, 9, 1) 89%);
     }
 
     .tituloCarta {
