--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,8 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  background-color: #09520c;
+  background: #09520c;
+  background: linear-gradient(137deg, rgb(9, 82, 12) 13%, rgb(49, 176, 102) 85%);
 }
 .navegacion .links {
   display: flex;
@@ -50,21 +51,10 @@
   font-family: "Bagel Fat One", system-ui;
 }
 
-header {
-  background-color: #09520c;
-}
-
-nav ul {
-  list-style: none;
-}
-
-nav li a {
-  color: #FEFAE0;
-}
-
 /* Footer */
 .footer {
-  background-color: #09520c;
+  background: #09520c;
+  background: linear-gradient(137deg, rgb(9, 82, 12) 13%, rgb(49, 176, 102) 85%);
   height: 100px;
 }
 .footer .logo {
@@ -107,7 +97,8 @@ section img {
   width: 240px;
 }
 .carta .cuerpoCarta {
-  background-color: #B1AB86;
+  background: #B1AB86;
+  background: linear-gradient(136deg, rgb(177, 171, 134) 30%, rgb(117, 90, 9) 89%);
 }
 .carta .tituloCarta {
   text-align: center;
@@ -127,6 +118,7 @@ section img {
   height: 500px;
   background-position: center;
   background-size: cover;
+  margin-bottom: 20px;
 }
 .principal-Index .banner .subtitulo {
   text-align: center;
@@ -195,6 +187,10 @@ section img {
   display: flex;
   flex-direction: column;
   margin-top: 10px;
+  transition: 0.3s;
+}
+.principal-Contacto .formContacto .boton:hover {
+  transform: scale(1.1);
 }
 .principal-Contacto .mapa {
   display: flex;
