--- a/sass/page/_contacto.scss
+++ b/sass/page/_contacto.scss
@@ -17,6 +17,11 @@
             display: flex;
             flex-direction: column;
             margin-top: 10px;
+            transition: 0.3s;
+
+            &:hover {
+                transform: scale(1.1);
+            }
         }
     }
 
