--- a/sass/page/_index.scss
+++ b/sass/page/_index.scss
@@ -8,7 +8,8 @@
         height: 500px;
         background-position: center;
         background-size: cover;
-    
+        margin-bottom: 20px;
+
         .subtitulo {
         text-align: center;
         font-size: 20px;
